Second draft of condition maps, plot same and different talker side by side

--- a/7_coherence/src/average_max.Rmd
+++ b/7_coherence/src/average_max.Rmd
@@ -113,8 +113,7 @@ dropOutliers <- function(data) {
 
 # Scaling is relative to each condition, so you can only compare topography, not abs numbers
 
-S <- subset(coherr, condition = "S") %>% colMeans()
-%>% scaleData()
+S <- subset(coherr, condition = "S") %>% colMeans() %>% scaleData()
 S[which(S < 0.3)] <- NaN
 T <- subset(coherr, condition = "T") %>% colMeans() %>% scaleData()
 M <- subset(coherr, condition = "M") %>% colMeans() %>% scaleData()
@@ -148,40 +147,37 @@ ggplot() +
                                    size = S,
                                    colour = "#B8DE29FF",
                                    alpha = S,
-                                   stroke = 0))
-  # geom_point(data = talker_df, aes(1000+x = x, 
-  #                                  y = y,
-  #                                  size = T,
-  #                                  colour = "#287D8EFF",
-  #                                  alpha = T,
-  #                                  stroke = 0)) +
-  # geom_point(data = diff_coordinates, aes(x = x, 
-  #                                         y = y,
-  #                                         size = 1,
-  #                                         alpha = 0.5,
-  #                                         stroke = 0)) +
-  # geom_point(data = nodiff_coordinates, aes(x = 1000+x, 
-  #                                           y = y,
-  #                                           size = 1,
-  #                                           alpha = 0.5,
-  #                                           stroke = 0)) +
-  # # scale_color_discrete(name = "Level", labels = levels_label) +
-  # # scale_size_continuous(name = "p",
-  # #                       limits = c(1, 1000),
-  # #                       breaks = c(20, 100, 200),
-  # #                       labels = c("0.05", "0.01", "0.005")) +
-  # guides(alpha = FALSE) +
-  # annotate("text", x=20, y=5, label= "L", alpha = 0.8) +
-  # annotate("text", x=880, y=5, label= "R", alpha = 0.8) +
-  # theme(axis.line=element_blank(),axis.text.x=element_blank(),
-  #       axis.text.y=element_blank(),axis.ticks=element_blank(),
-  #       axis.title.x=element_blank(),
-  #       axis.title.y=element_blank(),
-  #       panel.background=element_blank(),
-  #       panel.border=element_blank(),
-  #       panel.grid.major=element_blank(),
-  #       panel.grid.minor=element_blank(),
-  #       plot.background=element_blank())
+                                   stroke = 0)) +
+  geom_point(data = talker_df, aes(1000+x,
+                                   y = y,
+                                   size = T,
+                                   colour = "#287D8EFF",
+                                   alpha = T,
+                                   stroke = 0)) +
+  geom_point(data = coordinates, aes(x = x,
+                                          y = y,
+                                          size = 1,
+                                          alpha = 0.5,
+                                          stroke = 0)) +
+  geom_point(data = coordinates, aes(x = 1000+x,
+                                            y = y,
+                                            size = 1,
+                                            alpha = 0.5,
+                                            stroke = 0)) +
+  scale_color_discrete(name = "Level", labels = c("T", "S")) +
+  scale_size_continuous(limits = c(1, 6.2)) +
+  guides(alpha = FALSE) +
+  annotate("text", x=20, y=5, label= "L", alpha = 0.8) +
+  annotate("text", x=880, y=5, label= "R", alpha = 0.8) +
+  theme(axis.line=element_blank(),axis.text.x=element_blank(),
+        axis.text.y=element_blank(),axis.ticks=element_blank(),
+        axis.title.x=element_blank(),
+        axis.title.y=element_blank(),
+        panel.background=element_blank(),
+        panel.border=element_blank(),
+        panel.grid.major=element_blank(),
+        panel.grid.minor=element_blank(),
+        plot.background=element_blank())
 # }
 ```
  
